[metadata]
name = pyreap
version = 1.0.0
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Tool to automatically reap sub-processes.
long_description = Tool to automatically reap sub-processes.
keywords = pyreap reap subprocess
url = https://github.com/tgree/pyreap
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = reap
