[metadata]
name = pyreap
version = 0.9.2
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Tool to automatically reap sub-processes.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = pyreap reap subprocess
url = https://github.com/tgree/pyreap
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: POSIX
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = reap
